--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.36.0",
+    "eslint-config-react-app": "^7.0.1",
     "sass": "^1.59.3",
     "vite": "^4.2.0"
   }
